kubernetes/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-reflector-go-deployment
  labels:
    app: aks-reflector
    tier: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: aks-reflector
      tier: backend
  template:
    metadata:
      labels:
        app: aks-reflector
        tier: backend
    spec:
      containers:
      - name: aks-reflector-go
        image: cloudnativegbb.azurecr.io/aks-reflector-go
        ports:
        - containerPort: 80 # {AWGO_LISTENING_PORT}
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
